--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,6 @@ body {
 }
 
 #game-box {
-    background-image: url('assets/bgGame.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -41,6 +40,22 @@ body {
     overflow: hidden;
     aspect-ratio: 1280 / 853;
     width: 100%
+}
+
+.world {
+    background-image: url('assets/bgGame.jpg');
+}
+
+.home {
+    background-image : url('/public/assets/MapAssets/HomePD.jpg');
+}
+
+.temple{
+    background-image: url('/public/assets/MapAssets/Temple.jpg');
+}
+
+.RiverPost{
+    background-image: url('/public/assets/MapAssets/RiverPost.png');
 }
 
 /* Game Wrapper */
